--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,23 @@
 /* FOGLIO DI STILE PER LAYOUT WORDPRESS */
 
+/* REGOLE GENERALI */
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+/* REGOLE PRINCIPALI   */
 body {
   width: 100%;
   margin: auto;
-  max-width: 1100px;
+  max-width: 1400px;
+  padding: 0 50px 0 50px;
+  margin-top: 20px;
 }
 
 header {
-  height: 250px;
+  height: 200px;
   /* debug */
   background-color: yellow;
   /* fine debug */
@@ -28,22 +32,20 @@ nav {
 
 main {
   margin-top: 10px;
+  margin-bottom: 10px;
+  background-color: rgb(208, 208, 208);
 }
 
+/* OPERAZIONE DI CLEARFIX PER I FLOAT FIGLI */
 main::after {
   content:"";
   display: table;
   clear: both;
-  /* debug */
-  background-color: black;
-  border: 1px solid red;
-  width: 100%;
-  /* fine debug */
 }
 
 aside {
-  background-color: pink;
-  width: 20%;
+  background-color: #d486da;
+  width: 33.33%;
   height: 200px;
 }
 
@@ -52,12 +54,18 @@ aside {
 }
 
 section {
-  background-color: orange;
-  width: calc(60% - 20px);
-  margin-left:10px;
-  margin-right:10px;
+
+  width: 33.33%;
   height: 500px;
   float:left;
+  padding: 0 10px 0 10px;
+
+}
+
+#section {
+  background-color: #7c0470;
+  width: 100%;
+  height: 100%;
 }
 
 .destra {
@@ -65,8 +73,7 @@ section {
   }
 
 footer {
-  margin-top: 10px;
   height: 100px;
   width: 100%;
-  background-color: lightblue;
+  background-color: #9ed3e1;
 }
